# Greedy-Hill-Algo-implementation-with-Custom-AI-Library-with-C

./: README.md  doc.rar
CLionFiles/: CMakeLists.txt  Example_main.c  SolutionListOperations.c  TrainAndTest.c
src/: TrainAndTest.c
